--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,11 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+/* responsive styles */
+
+@media(max-width:500px) {
+    nav {
+        width:50%;
+    }
+}
