made responsive styling changes

--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@ font-size: 100%;
 font: inherit;  
 vertical-align: baseline;  
 }
+
 /*GENERAL STYLES*/
 html{
     font-size:62.5%;
@@ -26,7 +27,7 @@ html{
 body{
     font-size:1.6rem;
     line-height: 1.5;
-    font-family: 'Raleway', sans-serif;	
+    font-family: 'Raleway', sans-serif;
 }
 h1, p, .name, .bio {	
     font-family: 'Raleway', sans-serif;	
@@ -41,6 +42,7 @@ a {
     text-decoration: none;	
     color: black;
     font-size:2.5rem;	
+    
 }	
 a:hover {	
     font-weight: bold;	
@@ -79,7 +81,6 @@ nav a{
 }
 nav span{
     border-left:3px solid #626262;
-
 }
 /*Title Section Styles*/
 .title-container{
@@ -138,7 +139,29 @@ button:hover{
 /* responsive styles */
 
 @media(max-width:500px) {
-    nav {
+    img { /*resized images of art to be mobile friendly */ 
+        height: 30vh; 
+    }
+    a { /*resized links to be smaller for nav bar aesthetics */
+        font-size: 1.8rem;
+    }
+    nav { /*nav bar links are squeezed together on mobile, resized */
         width:50%;
+    }
+    .title-container div { /*resized title section to stretch across entire page */
+        width:100%;
+    }
+    .title-container hr { /*resized border to stretch across entire page */
+        width:100%;
+    }
+    .artists-container { /*adjusted artists section to have artists flow vertically */
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .artist { /*adjusted artists section to have artists flow vertically */
+        width:80%;
+    }
+    .artist img { /*adjusted art images so that they are less wide than the bios below, per mobile design file*/
+        width: 70%;
     }
 }
